[build-system]
requires = ["hatchling~=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "law"
description = "Build large-scale task workflows using luigi, remote job submission, remote targets, and environment sandboxing."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Marcel Rieger", email = "github.riga@icloud.com"},
]
keywords = [
  "luigi",
  "workflow",
  "pipeline",
  "remote",
  "gfal",
  "submission",
  "cluster",
  "grid",
  "htcondor",
  "lsf",
  "glite",
  "arc",
  "slurm",
  "sandboxing",
  "docker",
  "singularity",
  "apptainer"
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
]
dynamic = ["version"]
# pinned to 3.9
dependencies = [
  "luigi~=3.6",
  "typing_extensions~=4.15",
]

[project.optional-dependencies]
# pinned to 3.9
dev = [
  "build~=1.4;python_version < '3.10'",
  "build~=1.5;python_version >= '3.10'",
  "twine~=6.2",
  "mypy~=1.19;python_version < '3.10'",
  "mypy~=2.1;python_version >= '3.10'",
  "pytest~=8.4;python_version < '3.10'",
  "pytest~=9.1;python_version >= '3.10'",
  "pytest-cov~=7.1",
  "ipykernel~=6.31",
  "types-docutils~=0.22",
  "uniplot~=0.22",
  "pre-commit~=4.3;python_version < '3.10'",
  "pre-commit~=4.6;python_version >= '3.10'",
  "pyyaml~=6.0",
  "types-pyyaml~=6.0",
  "types-requests~=2.32",
]
# pinned to 3.13, see .readthedocs.yaml
docs = [
  "sphinx~=9.1",
  "sphinx-autodoc-typehints~=3.11",
  "sphinx-book-theme~=1.2",
  "sphinx-lfs-content~=1.1",
  "autodocsumm~=0.2",
  "myst-parser~=5.1",
]

[project.urls]
Homepage = "https://github.com/riga/law"
Documentation = "https://law.readthedocs.io"
Repository = "https://github.com/riga/law.git"
Issues = "https://github.com/riga/law/issues"

[project.scripts]
law = "law.__main__:main"
law_cms_delegate_myproxy = "law.contrib.cms.scripts.delegate_myproxy:main"

[tool.hatch]
version.path = "src/law/__meta__.py"
metadata.allow-direct-references = true

[tool.hatch.build]
exclude = [
  "/.github",
  "/docs",
  "/tests",
  "/local_tests",
  "/tmp",
  "/unused",
  "/dist",
  "/build",
  "/.venv",
  "*.py[cod]",
  "__pycache__",
  ".all-contributorsrc",
  ".git*",
  ".readthedocs.yaml",
  "codecov.yml",
  ".pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/law"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]
exclude = ["docs", "build", "examples", "local_tests"]

[tool.ruff.lint]
preview = true
ignore = [
  "PLR",  # design related pylint codes
  "B901",  # return in generator
  "B905",  # use of zip() without strict parameter
  "E402",  # imports at the top of the file
  "G004",  # logging statement uses f-string
  "I002",  # isort: "from __future__ import annotations"
  "ISC001",  # flake8-implicit-str-concat: Implicit string concatenation"
  "PLW2901",  # ignore reassingment of loop variable
  "E731",  # do not assign a lambda expression, use a def
  "EM101",  # do not use literal strings in exception messages
  "EM102",  # do not use f-string in exception messages
  "SIM103",  # return needless bool
  "RUF100",  # unused "noqa" directive
  "PLC0415",  # `import` should be at the top-level of a file
  "PLW0603",  # discouraged use of global statement
  "PLW3201",  # dunder method `...` has no special meaning in Python 3
  "PLW0717",  # too many lines in try block
  "RUF012",  # mutable class default
  "RUF017",  # avoid nested comprehensions
  "RUF052",  # local dummy variable `...` is accessed
  "RUF067",  # __init__ should only contain imports
  "RET504",  # unnecessary assignment before return
]
select = [
  "E",
  "F",
  "W",  # flake8
  "B",  # flake8-bugbear
  "I",  # isort
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "G",  # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "RET",  # flake8-return
  "RUF",  # ruff-specific
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "COM812",  # trailing commas
  "E303",  # too many blank lines
]
unfixable = [
  "F841",  # would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.13"
strict = false
files = ["src/law", "tests"]
exclude = ["docs", "build", "examples", "local_tests"]
disable_error_code = ["no-redef", "no-untyped-def", "valid-type", "method-assign"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "--cov=law --cov-report xml:coverage.xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/law"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 5
